--- a/analysis/test_ga.ipynb
+++ b/analysis/test_ga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1471ed0",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9de2cb15",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ffa7733e",
    "metadata": {},
    "outputs": [
@@ -155,48 +155,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0: Best costs = [[0.386849, 0.004425]]\n",
-      "Generation 1: Best costs = [[0.386849, 0.000919]]\n",
-      "Generation 2: Best costs = [[0.386849, 0.000919]]\n",
-      "Generation 3: Best costs = [[0.386849, 0.000154]]\n",
-      "Generation 4: Best costs = [[0.386849, 4.4e-05]]\n",
-      "Generation 5: Best costs = [[0.386456, 0.0]]\n",
-      "Generation 6: Best costs = [[0.386063, 0.0]]\n",
-      "Generation 7: Best costs = [[0.38567, 1e-06]]\n",
+      "Generation 0: Best costs = [[0.386849, 0.001298]]\n",
+      "Generation 1: Best costs = [[0.386849, 0.001298]]\n",
+      "Generation 2: Best costs = [[0.386849, 0.000542]]\n",
+      "Generation 3: Best costs = [[0.386849, 0.000127]]\n",
+      "Generation 4: Best costs = [[0.386849, 3.8e-05]]\n",
+      "Generation 5: Best costs = [[0.386456, 2e-06]]\n",
+      "Generation 6: Best costs = [[0.386063, 1e-06]]\n",
+      "Generation 7: Best costs = [[0.38567, 0.0]]\n",
       "Generation 8: Best costs = [[0.385277, 0.0]]\n",
       "Generation 9: Best costs = [[0.384884, 0.0]]\n",
       "Generation 10: Best costs = [[0.384492, 0.0]]\n",
       "Generation 11: Best costs = [[0.3841, 0.0]]\n",
-      "Generation 12: Best costs = [[0.383708, 1e-06]]\n",
-      "Generation 13: Best costs = [[0.383316, 1e-06]]\n",
-      "Generation 14: Best costs = [[0.382925, 1e-06]]\n",
-      "Generation 15: Best costs = [[0.382534, 1e-06]]\n",
-      "Generation 16: Best costs = [[0.382143, 1e-06]]\n",
-      "Generation 17: Best costs = [[0.381752, 1e-06]]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 52\u001b[39m\n\u001b[32m     48\u001b[39m runner.diagnostic_plot = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m     49\u001b[39m runner.seed = \u001b[32m0\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m52\u001b[39m \u001b[43mrunner\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga3.py:1058\u001b[39m, in \u001b[36mOrchestrator.run\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1056\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.ga.best_costs_per_generation:\n\u001b[32m   1057\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(s) == \u001b[38;5;28mself\u001b[39m._current_generation + \u001b[32m2\u001b[39m\n\u001b[32m-> \u001b[39m\u001b[32m1058\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mga\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply_selection\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1059\u001b[39m \u001b[38;5;66;03m# Format best costs as lists for display (max 6 decimals)\u001b[39;00m\n\u001b[32m   1060\u001b[39m best_costs_str = [[\u001b[38;5;28mround\u001b[39m(\u001b[38;5;28mfloat\u001b[39m(x), \u001b[32m6\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m s[-\u001b[32m1\u001b[39m].flatten()] \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.ga.best_costs_per_generation]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga3.py:300\u001b[39m, in \u001b[36mGA.apply_selection\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    298\u001b[39m     \u001b[38;5;28mself\u001b[39m._skip_next_selection = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m    299\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m300\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_apply_selection\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga3.py:462\u001b[39m, in \u001b[36mGAMulti._apply_selection\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    460\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_apply_selection\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    461\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m ga \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.ga_list:\n\u001b[32m--> \u001b[39m\u001b[32m462\u001b[39m         \u001b[43mga\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply_selection\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga3.py:300\u001b[39m, in \u001b[36mGA.apply_selection\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    298\u001b[39m     \u001b[38;5;28mself\u001b[39m._skip_next_selection = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m    299\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m300\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_apply_selection\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga3.py:874\u001b[39m, in \u001b[36mGASinglePopulationOld._apply_selection\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    872\u001b[39m selected_id = np.argmax(diversity[:sel_size])\n\u001b[32m    873\u001b[39m selected[selected_id] = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m874\u001b[39m diversity = np.minimum(\u001b[43mkgs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcompute_genetic_diversity\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcp\u001b[49m\u001b[43m.\u001b[49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_xyt\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43mmax_sel\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcp\u001b[49m\u001b[43m.\u001b[49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_xyt\u001b[49m\u001b[43m[\u001b[49m\u001b[43mselected_id\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m.get(), diversity)\n\u001b[32m    875\u001b[39m \u001b[38;5;66;03m#print(sel_size, diversity)\u001b[39;00m\n\u001b[32m    876\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m(np.all(diversity[selected[:max_sel]]<\u001b[32m1e-4\u001b[39m))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/kaggle_support.py:1098\u001b[39m, in \u001b[36mcompute_genetic_diversity\u001b[39m\u001b[34m(population_xyt, reference_xyt)\u001b[39m\n\u001b[32m   1096\u001b[39m \u001b[38;5;66;03m# Add batch dimension to reference and call the matrix version\u001b[39;00m\n\u001b[32m   1097\u001b[39m reference_batch = reference_xyt[cp.newaxis, :, :]  \u001b[38;5;66;03m# (1, N_trees, 3)\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1098\u001b[39m result_matrix = \u001b[43mcompute_genetic_diversity_matrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpopulation_xyt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreference_batch\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# (N_pop, 1)\u001b[39;00m\n\u001b[32m   1100\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m result_matrix[:, \u001b[32m0\u001b[39m]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/kaggle_support.py:1043\u001b[39m, in \u001b[36mcompute_genetic_diversity_matrix\u001b[39m\u001b[34m(population_xyt, reference_xyt)\u001b[39m\n\u001b[32m   1041\u001b[39m     dtheta = pop_theta[:, :, cp.newaxis, cp.newaxis] - ref_theta[cp.newaxis, cp.newaxis, :, :]\n\u001b[32m   1042\u001b[39m     dtheta = cp.remainder(dtheta + np.pi, \u001b[32m2\u001b[39m*np.pi) - np.pi\n\u001b[32m-> \u001b[39m\u001b[32m1043\u001b[39m     cost_matrices = cp.sqrt(dx**\u001b[32m2\u001b[39m + \u001b[43mdy\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[32;43m2\u001b[39;49m + dtheta**\u001b[32m2\u001b[39m)\n\u001b[32m   1045\u001b[39m     all_cost_matrices.append(cost_matrices)\n\u001b[32m   1047\u001b[39m \u001b[38;5;66;03m# ---------------------------------------------------------\u001b[39;00m\n\u001b[32m   1048\u001b[39m \u001b[38;5;66;03m# Step 3: Solve assignment problems on GPU using RAFT\u001b[39;00m\n\u001b[32m   1049\u001b[39m \u001b[38;5;66;03m# ---------------------------------------------------------\u001b[39;00m\n\u001b[32m   1050\u001b[39m \u001b[38;5;66;03m# Stack all cost matrices on GPU: shape (8, N_pop, N_trees, N_ref, N_trees)\u001b[39;00m\n\u001b[32m   1051\u001b[39m \u001b[38;5;66;03m# Then reshape to (8*N_pop*N_ref, N_trees, N_trees) for batched solving\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mcupy/_core/core.pyx:1448\u001b[39m, in \u001b[36mcupy._core.core._ndarray_base.__pow__\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mcupy/_core/core.pyx:1799\u001b[39m, in \u001b[36mcupy._core.core._ndarray_base.__array_ufunc__\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mcupy/_core/_kernel.pyx:1333\u001b[39m, in \u001b[36mcupy._core._kernel.ufunc.__call__\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mcupy/_core/_kernel.pyx:1593\u001b[39m, in \u001b[36mcupy._core._kernel._Ops.guess_routine\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mcupy/_core/_kernel.pyx:1116\u001b[39m, in \u001b[36mcupy._core._kernel._min_scalar_type\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/rapids-25.10/lib/python3.13/site-packages/numpy/_core/multiarray.py:642\u001b[39m, in \u001b[36mmin_scalar_type\u001b[39m\u001b[34m(a)\u001b[39m\n\u001b[32m    582\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    583\u001b[39m \u001b[33;03m    can_cast(from_, to, casting='safe')\u001b[39;00m\n\u001b[32m    584\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    637\u001b[39m \n\u001b[32m    638\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m    639\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m (from_,)\n\u001b[32m--> \u001b[39m\u001b[32m642\u001b[39m \u001b[38;5;129m@array_function_from_c_func_and_dispatcher\u001b[39m(_multiarray_umath.min_scalar_type)\n\u001b[32m    643\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmin_scalar_type\u001b[39m(a):\n\u001b[32m    644\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    645\u001b[39m \u001b[33;03m    min_scalar_type(a, /)\u001b[39;00m\n\u001b[32m    646\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    685\u001b[39m \n\u001b[32m    686\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m    687\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m (a,)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "Generation 12: Best costs = [[0.383708, 0.0]]\n",
+      "Generation 13: Best costs = [[0.383316, 0.0]]\n",
+      "Generation 14: Best costs = [[0.382925, 0.0]]\n",
+      "Generation 15: Best costs = [[0.382534, 0.0]]\n",
+      "Generation 16: Best costs = [[0.382143, 0.0]]\n",
+      "Generation 17: Best costs = [[0.381752, 0.0]]\n",
+      "Generation 18: Best costs = [[0.381361, 0.0]]\n",
+      "Generation 19: Best costs = [[0.380971, 0.0]]\n",
+      "Generation 20: Best costs = [[0.38058, 0.0]]\n",
+      "Generation 21: Best costs = [[0.38019, 1e-06]]\n",
+      "Generation 22: Best costs = [[0.3798, 1e-06]]\n",
+      "Generation 23: Best costs = [[0.379411, 0.0]]\n",
+      "Generation 24: Best costs = [[0.379021, 1e-06]]\n",
+      "Generation 25: Best costs = [[0.378632, 1e-06]]\n",
+      "Generation 26: Best costs = [[0.378243, 1e-06]]\n",
+      "Generation 27: Best costs = [[0.377854, 1e-06]]\n",
+      "Generation 28: Best costs = [[0.377465, 1e-06]]\n",
+      "Generation 29: Best costs = [[0.377077, 1e-06]]\n",
+      "Generation 30: Best costs = [[0.376688, 2e-06]]\n",
+      "Generation 31: Best costs = [[0.3763, 6e-06]]\n",
+      "Generation 32: Best costs = [[0.375912, 5e-06]]\n",
+      "Generation 33: Best costs = [[0.375912, 5e-06]]\n",
+      "Generation 34: Best costs = [[0.375912, 5e-06]]\n",
+      "Generation 35: Best costs = [[0.375912, 5e-06]]\n",
+      "Generation 36: Best costs = [[0.375912, 5e-06]]\n",
+      "Generation 37: Best costs = [[0.375912, 4e-06]]\n",
+      "Generation 38: Best costs = [[0.375912, 4e-06]]\n",
+      "Generation 39: Best costs = [[0.375912, 4e-06]]\n",
+      "Generation 40: Best costs = [[0.375912, 4e-06]]\n",
+      "Generation 41: Best costs = [[0.375912, 4e-06]]\n",
+      "Generation 42: Best costs = [[0.375912, 4e-06]]\n",
+      "Generation 43: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 44: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 45: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 46: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 47: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 48: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 49: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 50: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 51: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 52: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 53: Best costs = [[0.375912, 3e-06]]\n",
+      "Generation 54: Best costs = [[0.375912, 3e-06]]\n"
      ]
     }
    ],
@@ -204,53 +217,16 @@
     "#%%pyinstrument\n",
     "#kgs.profiling=True\n",
     "# %matplotlib widget\n",
-    "import pack_ga3 as pack_ga2\n",
+    "import pack_ga3\n",
     "import pack_runner\n",
-    "importlib.reload(pack_ga2)\n",
+    "importlib.reload(pack_ga3)\n",
     "fastMode = False\n",
     "kgs.debugging_mode = 2\n",
     "\n",
-    "tmp = pack_ga2.GA()\n",
-    "\n",
-    "runner = pack_ga2.Orchestrator(n_generations=6000 if not fastMode else 50)\n",
-    "runner.ga = pack_ga2.GAMultiRing(N=16 if not fastMode else 4)\n",
-    "runner.ga.diversity_reset_threshold = 5./40\n",
-    "runner.ga.mate_distance=6\n",
-    "\n",
-    "ga_base = pack_ga2.GASinglePopulationOld(N_trees_to_do=10)\n",
-    "#ga_base.population_size = 250\n",
-    "#ga_base.prob_mate_own = 0.25\n",
-    "value = 0.125\n",
-    "ga_base.population_size = int(ga_base.population_size * value)\n",
-    "ga_base.selection_size = [int( (s-1) * value)+1 for s in ga_base.selection_size]\n",
-    "ga_base.selection_size = ga_base.selection_size[:-6]\n",
-    "ga_base.do_legalize = False\n",
-    "ga_base.reset_check_generations = 50 if not fastMode else 3\n",
-    "ga_base.reset_check_threshold = 0.5 if not fastMode else 0.9\n",
-    "ga_base.freeze_duration = 100 if not fastMode else 3\n",
-    "#ga_base.move.moves[-1][2] *= 2\n",
-    "ga_base.prob_mate_own = 0.7\n",
-    "ga_base.reduce_h_threshold = 1e-5/40\n",
-    "ga_base.always_allow_mate_with_better = False\n",
-    "ga_base.fixed_h = -1.\n",
-    "\n",
-    "runner.ga.ga_base = ga_base\n",
-    "runner.ga.do_legalize = not fastMode\n",
-    "runner.ga.allow_reset_ratio = 0.5 if not fastMode else 0.\n",
-    "\n",
-    "runner.ga.make_own_fig = (2,3)\n",
-    "runner.ga.make_own_fig_size = (18,12)\n",
-    "runner.ga.best_costs_per_generation_ax = ((0,False,(0,1)),)#( (0,False,(0,0)) ,(1,True,(0,1)))\n",
-    "runner.ga.plot_subpopulation_costs_per_generation_ax = ( (0,False,(0,2)) ,(1,True,(1,2)))\n",
-    "runner.ga.champion_genotype_ax = (1,0)\n",
-    "runner.ga.champion_phenotype_ax = (0,0)\n",
-    "runner.ga.plot_diversity_ax = (1,1)\n",
-    "\n",
-    "runner = pack_ga2.baseline()\n",
+    "runner = pack_ga3.baseline()\n",
     "runner.ga.ga_base.N_trees_to_do = 10\n",
-    "runner.diagnostic_plot = False\n",
+    "runner.diagnostic_plot = True\n",
     "runner.seed = 0\n",
-    "\n",
     "\n",
     "runner.run()"
    ]
