--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -371,7 +371,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7187c2044040>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x78017bf2d440>\n",
       "All tests passed.\n"
      ]
     }
