--- a/analysis/runs/1to10.ipynb
+++ b/analysis/runs/1to10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1471ed0",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.insert(0, os.path.join(os.getcwd(), '../core'))\n",
+    "sys.path.insert(0, os.path.join(os.getcwd(), '../../core'))\n",
     "import kaggle_support as kgs\n",
     "import importlib\n",
     "import matplotlib.pyplot as plt\n",
