--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -376,7 +376,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7d0a84c44440>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x79a941dfa9c0>\n",
       "All tests passed.\n"
      ]
     }
