--- a/analysis/test_many_ga.ipynb
+++ b/analysis/test_many_ga.ipynb
@@ -48,7 +48,7 @@
     "os.makedirs(output_dir + 'full/', exist_ok=True)\n",
     "os.makedirs(output_dir + 'abbr/', exist_ok=True)\n",
     "\n",
-    "fast_mode = True  # Set to True for quick testing\n",
+    "fast_mode = False  # Set to True for quick testing\n",
     "which_runner = pack_runner.baseline_runner  # Which example runner to use\n",
     "n_parallel_processes = 4 if kgs.env=='local' else 4\n",
     "print(f\"Will use {n_parallel_processes} parallel processes\")"
@@ -385,7 +385,11 @@
       "Generation 2: Best costs = [[0.371981, 0.037923]]\n",
       "Generation 1: Best costs = [[0.371981, 0.109498]]\n",
       "Generation 3: Best costs = [[0.371981, 0.031027]]\n",
-      "Generation 2: Best costs = [[0.371981, 0.061435]]\n"
+      "Generation 2: Best costs = [[0.371981, 0.061435]]\n",
+      "Generation 4: Best costs = [[0.371981, 0.022852]]\n",
+      "Generation 3: Best costs = [[0.371981, 0.041601]]\n",
+      "Generation 4: Best costs = [[0.371981, 0.031765]]\n",
+      "Generation 5: Best costs = [[0.371981, 0.019483]]\n"
      ]
     }
    ],
@@ -676,7 +680,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rapids-25.10",
+   "display_name": "Python3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -690,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.10"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
