--- a/analysis/compare_solutions.ipynb
+++ b/analysis/compare_solutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "#%matplotlib widget\n",
+    "%matplotlib widget\n",
     "import sys\n",
     "import os\n",
     "sys.path.insert(0, os.path.join(os.getcwd(), '../core'))\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e5ce5553",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b89459ba",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c31990bb",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "634a9b80",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e601cf84",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(12,12))\n",
     "N_trees = np.arange(1,201)\n",
-    "N=1\n",
+    "N=10\n",
     "lines = []\n",
     "vals_res = np.array([np.inf]*200)\n",
     "line = plt.plot(N_trees[N:], theirs[1][N:], 'k')\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9b66b0ae",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "004d7e77",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5cd5651f",
    "metadata": {},
    "outputs": [
@@ -272,9 +272,9 @@
     }
    ],
    "source": [
-    "import pack_io\n",
-    "pd = pack_io.solution_list_to_dataframe(mine[0], compact=True)\n",
-    "pd.to_csv(kgs.temp_dir + 'submission_compact.csv', index=False)"
+    "# import pack_io\n",
+    "# pd = pack_io.solution_list_to_dataframe(mine[0], compact=True)\n",
+    "# pd.to_csv(kgs.temp_dir + 'submission_compact.csv', index=False)"
    ]
   },
   {
