--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -135,16 +135,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0: Best costs = [[0.386849, 0.014615]]\n",
-      "Generation 1: Best costs = [[0.386849, 0.009798]]\n",
-      "Generation 2: Best costs = [[0.386849, 0.009798]]\n",
-      "Generation 3: Best costs = [[0.386849, 0.005879]]\n",
-      "Generation 4: Best costs = [[0.386849, 0.00459]]\n",
-      "Generation 0: Best costs = [[0.386849, 0.014615]]\n",
-      "Generation 1: Best costs = [[0.386849, 0.009798]]\n",
-      "Generation 2: Best costs = [[0.386849, 0.009798]]\n",
-      "Generation 3: Best costs = [[0.386849, 0.005879]]\n",
-      "Generation 4: Best costs = [[0.386849, 0.00459]]\n",
+      "Generation 0: Best costs = [[0.386849, 0.018447]]\n",
+      "Generation 1: Best costs = [[0.386849, 0.011361]]\n",
+      "Generation 2: Best costs = [[0.386849, 0.00874]]\n",
+      "Generation 3: Best costs = [[0.386849, 0.007479]]\n",
+      "Generation 4: Best costs = [[0.386849, 0.007479]]\n",
+      "Generation 0: Best costs = [[0.386849, 0.018447]]\n",
+      "Generation 1: Best costs = [[0.386849, 0.011361]]\n",
+      "Generation 2: Best costs = [[0.386849, 0.00874]]\n",
+      "Generation 3: Best costs = [[0.386849, 0.007479]]\n",
+      "Generation 4: Best costs = [[0.386849, 0.007479]]\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -376,7 +376,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x732401a04840>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7b30a9747240>\n",
       "All tests passed.\n"
      ]
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
