--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -11,6 +11,7 @@
      "output_type": "stream",
      "text": [
       "local\n",
+      "WARNING: CUDA MPS not active\n",
       "False\n",
       "init CUDA\n",
       "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
@@ -21,27 +22,30 @@
       "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    96 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 38 registers, 96 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 14.276 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 74 registers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 781.268 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 139 registers, 2144 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
+      "ptxas info    : Used 152 registers, used 1 barriers, 2144 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 518.469 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
       "  Max threads per block (kernel): 384\n",
-      "  Num registers: 139\n",
+      "  Num registers: 152\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 2324\n",
       "  Local memory (bytes): 2144\n",
@@ -51,27 +55,30 @@
       "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    96 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 38 registers, 96 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 14.010 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 74 registers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 792.324 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2080 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 122 registers, 2080 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
+      "ptxas info    : Used 126 registers, used 1 barriers, 2080 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 106.194 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
       "  Max threads per block (kernel): 512\n",
-      "  Num registers: 122\n",
+      "  Num registers: 126\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 2324\n",
       "  Local memory (bytes): 2080\n",
@@ -81,34 +88,37 @@
       "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    96 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 38 registers, 96 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 13.959 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 74 registers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 852.138 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    336 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 92 registers, 336 bytes cumulative stack size, 420 bytes cmem[0], 144 bytes cmem[2]\n",
+      "ptxas info    : Used 91 registers, used 1 barriers, 336 bytes cumulative stack size, 420 bytes cmem[0], 144 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 111.934 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
       "  Max threads per block (kernel): 640\n",
-      "  Num registers: 92\n",
+      "  Num registers: 91\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 2324\n",
       "  Local memory (bytes): 336\n",
       "\n",
       "--- Kernel: multi_boundary_list_total ---\n",
-      "  Max threads per block (kernel): 768\n",
-      "  Num registers: 74\n",
+      "  Max threads per block (kernel): 896\n",
+      "  Num registers: 68\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 2324\n",
       "  Local memory (bytes): 528\n",
@@ -118,7 +128,7 @@
       "  Num registers: 38\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 2324\n",
-      "  Local memory (bytes): 96\n",
+      "  Local memory (bytes): 88\n",
       "[36 36 37 38 39 40 41 42 43 44 45 46 47 48 50 51 52 53 54 56 57 58 60 61\n",
       " 63 64 66 67 69 71 72 74 76 78 80]\n",
       "[np.int64(36), np.int64(37), np.int64(38), np.int64(39), np.int64(40), np.int64(41), np.int64(42), np.int64(43), np.int64(44), np.int64(45), np.int64(46), np.int64(47), np.int64(48), np.int64(50), np.int64(51), np.int64(52), np.int64(53), np.int64(54), np.int64(56), np.int64(57), np.int64(58), np.int64(60), np.int64(61), np.int64(63), np.int64(64), np.int64(66), np.int64(67), np.int64(69), np.int64(71), np.int64(72), np.int64(74), np.int64(76), np.int64(78), np.int64(80)]\n",
@@ -273,119 +283,7 @@
       "[4.104856425881563]\n",
       "[4.104856425881563]\n",
       "[5.057507187718128]\n",
-      "[5.057507187718128]\n",
-      "[0.14137271005089297]\n",
-      "[0.14137271005089297]\n",
-      "[3.9443247191489634]\n",
-      "[3.9443247191489634]\n",
-      "[2.7101149544017678]\n",
-      "[2.710114954401768]\n",
-      "[3.3485516965845354]\n",
-      "[3.348551696584536]\n",
-      "  Vectorized check for CollisionCostSeparation\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[4.10485643 5.05750719]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CollisionCostSeparation\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.14137271 3.94432472]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[8.393463985029811]\n",
-      "[8.393463985029813]\n",
-      "[0.07739210274006779]\n",
-      "[0.07739210274006779]\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[8.39346399 0.0773921 ]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[41.967319925149056]\n",
-      "[41.96731992514906]\n",
-      "[0.38696051370033896]\n",
-      "[0.38696051370033896]\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[41.96731993  0.38696051]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CollisionCostOverlappingArea\n",
-      "[2.1461860991847606]\n",
-      "[2.146186099184761]\n",
-      "[2.63608491904749]\n",
-      "[2.636084919047489]\n",
-      "[0.03967562067715556]\n",
-      "[0.03967562067715555]\n",
-      "[1.815359415709033]\n",
-      "[1.8153594157090334]\n",
-      "[1.2306033827440457]\n",
-      "[1.230603382744046]\n",
-      "[1.5908309651128032]\n",
-      "[1.590830965112803]\n",
-      "  Vectorized check for CollisionCostOverlappingArea\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[2.1461861  2.63608492]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CollisionCostOverlappingArea\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.03967562 1.81535942]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CostCompound\n",
-      "[1.6064569277644687]\n",
-      "[1.6064569277644687]\n",
-      "[7.517252156315438]\n",
-      "[7.517252156315438]\n",
-      "[1.3955765064284533]\n",
-      "[1.3955765064284533]\n",
-      "[1.4088248646468866]\n",
-      "[1.4088248646468866]\n",
-      "[1.1255344863205303]\n",
-      "[1.1255344863205305]\n",
-      "[1.2745655089753605]\n",
-      "[1.274565508975361]\n",
-      "  Vectorized check for CostCompound\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[1.60645693 7.51725216]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CostCompound\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[1.39557651 1.40882486]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "=== Testing line_intersection ===\n",
-      "=== Compiling CUDA Primitives Test Kernels ===\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
-      "Compilation successful!\n",
-      "Initialization complete!\n",
-      "Testing 29 cases...\n",
-      "✓ Forward results match with and without gradients\n",
-      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
-      "\n",
-      "✓ All gradients match finite differences!\n",
-      "✓ line_intersection test PASSED\n",
-      "\n",
-      "=== Testing clip_against_edge ===\n",
-      "Testing 13 cases...\n",
-      "✓ Forward results match with and without gradients\n",
-      "✓ All test cases passed, max gradient error: 7.32e-10\n",
-      "✓ clip_against_edge test PASSED\n",
-      "\n",
-      "=== Testing polygon_area ===\n",
-      "✓ Forward results match with and without gradients\n",
-      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
-      "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7248cf6f29c0>\n",
-      "All tests passed.\n"
+      "[5.057507187718128]\n"
      ]
     }
    ],
@@ -402,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -422,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
